# JOR

./: LICENSE  README.md  check_path.ps1  design.md  package-lock.json  package.json  prd.md  prompt.md  tailwind.config.js  techstack.md
.github/workflows/: release.yml  winget-submission.yml  winget-update.yml  winget.yml
src/: clipboard.html  index.css  index.html  main.js  settings.html  style.css  tos.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  indexer.rs  main.rs  models.rs  search.rs  settings.rs
src-tauri/src/plugins/: clipboard.rs  clipboard_db.rs  converter.rs  mod.rs  window_manager.rs
v2/: index.html  package-lock.json  package.json
v2/src/: App.tsx  index.css
v2/src-tauri/: Cargo.toml
v2/src-tauri/src/: main.rs  models.rs
winget/manifests/j/Jor/jor/1.0.0/: Jor.jor.installer.yaml
